--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,13 @@
 ---
 layout: page
-title: Say Hello
+title: Get in touch
 permalink: /contact/
 tags: contact
 ---
 
+<div class="py2">
+<a href="http://keybase.io/surya">PGP Key</a>
+</div>
 <div class="py2">
   {% if site.ajaxify_contact_form %}
     <form class="form-stacked">
