tweaks + im going to stop now

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@ layout: default
 <!-- {% assign posts_count = (paginator.posts | size) %} -->
 
 <div class="home">
-
+<!-- <script type="text/javascript">
+  console.log("{{page.url}}")
+</script> -->
   <!-- {% if posts_count > 0 %} -->
   <div class="posts">
-
+  <!-- <p>{{page.url | split: ' ' |first }}</p> -->
     {% for post in site.posts %}
         <div class="post py3 {{post.categories| join: ' '}}">
           <div class="clearfix border">
