--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ layout: default
 </script> -->
   <!-- {% if posts_count > 0 %} -->
   <div class="posts">
+
+    <a href="http://shreeyashsalunke.com" class="blog-tag-item">Visit Portfolio<a>
+
   <!-- <p>{{page.url | split: ' ' |first }}</p> -->
     {% for post in site.posts %}
         <div class="post py3 {{post.categories| join: ' '}}">
