--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 layout: default
 ---
 <!-- {% assign posts_count = (paginator.posts | size) %} -->
+<script type="text/javascript" src="dat.gui.js"></script>
+<script type="text/javascript">
+    
+var FizzyText = function() {
+  this.message = 'Shreeyash';
+  this.speed = 0.8;
+  this.displayOutline = false;
+  this.explode = function() { ... };
+  // Define render logic ...
+};
+
+window.onload = function() {
+  var text = new FizzyText();
+  var gui = new dat.GUI();
+  gui.add(text, 'message');
+  gui.add(text, 'speed', -5, 5);
+  gui.add(text, 'displayOutline');
+  gui.add(text, 'explode');
+};
 
 <div class="home">
 <!-- <script type="text/javascript">
