--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <script type="text/javascript">
     
 var FizzyText = function() {
-  this.message = 'Shreeyash';
+  this.message = 'dat.gui';
   this.speed = 0.8;
   this.displayOutline = false;
   this.explode = function() { ... };
@@ -21,6 +21,9 @@ window.onload = function() {
   gui.add(text, 'displayOutline');
   gui.add(text, 'explode');
 };
+    
+</script>
+
 
 <div class="home">
 <!-- <script type="text/javascript">
