--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!-- {% assign posts_count = (paginator.posts | size) %} -->
-<script type="text/javascript" src="dat.gui.js"></script>
+<script type="text/javascript" src="build/dat.gui.js"></script>
 <script type="text/javascript">
     
 var FizzyText = function() {
